--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste para imagens de fundo<title>
+    <title>teste para imagens de fundo</title>
     <style>
 
         body {
-            background-image: url(imagens/wallpaper002.jpg);
+            background-image: url(imagens/wallpaper001.jpg);
         }
+
         div.quadrado {
-            border: 1px solid black;
+            display: inline-block;
+            border: 2px solid black;
+            border-radius: 10px;
+            background-color: lightgray;
+            width: 300px;
+            height: 300px;
         }
 
         #q1 {
-            background-color: aqua;
+            background-color: lightseagreen;
         }
 
         #q2 {
-            background-image: linear-gradient(to top, yellow, orange);
+            background-image: linear-gradient(to bottom, yellow, red);
         }
 
         #q3 {
-            background-image: url(imagens/wallpaper005.jpg);
+            background-image: url(imagens/pattern001.png);
         }
     </style>
 </head>
@@ -37,6 +43,5 @@
     <div class="quadrado" id="q3">
 
     </div>
-    
 </body>
 </html>
