--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -13,13 +13,11 @@
 <body>
     <header>
         <h1>
-            <span>C</span>ORDEL <span>M</span>ODERNO
+            Cordel Moderno
         </h1>
-        <nav>
             <p>
                 Por  <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
             </p>
-        </nav>
     </header>
     <main>
         <section class="normal">
@@ -34,7 +32,7 @@
             </p>
         </section>
 
-        <section class="person01">
+        <section class="person" id="img01">
             <p>
                 Não é mais como era antes<br>
                 É tudo abreviado<br>
@@ -67,7 +65,7 @@
             </p>
            
         </section>
-        <section class="person02">
+        <section class="person" id="img02">
             <p>
                 Tenho saudade das cartas<br>
                 Escritas com a própria mão<br>
@@ -102,7 +100,7 @@
     </main>
     <footer>
         <p>
-            Site criado por gustavoguanabara para o curso em video
+            Site criado por <a href="https://github.com/gustavoguanabara">gustavoguanabara</a> para o <a href="https://www.youtube.com/@CursoemVideo">cursoemvideo</a>
         </p>
     </footer>
 
