novos exercicios e modificações

--- a/desafios/d013/tabela001.html
+++ b/desafios/d013/tabela001.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas</title>
+    <title>Desafio</title>
     <style>
         table {
-            border-collapse: collapse;
-            width: 400px;
+            width: 200px;
         }
 
         td {
             border: 1px solid black;
+            border-radius: 3px;
             padding: 5px;
             text-align: center;
         }
@@ -23,24 +23,37 @@
     </style>
 </head>
 <body>
-    <h1>Mesclagem de celulas</h1>
     <table>
         <tr>
-            <td>A</td>
-            <td class="msc" colspan="2">B</td>
+            <td>1</td>
+            <td>2</td>
+            <td class="msc" rowspan="2">3</td>
+            <td>4</td>
         </tr>
         <tr>
-            <td class="msc" rowspan="3">D</td>
-            <td>E</td>
-            <td class="msc" rowspan="2">F</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+
         </tr>
         <tr>
-            <td>I</td>
+            <td class="msc" colspan="3">8</td>
+            <td>9</td>
+
         </tr>
         <tr>
-            <td>K</td>
-            <td>L</td>
+            <td class="msc" rowspan="2">10</td>
+            <td class="msc" colspan="2">11</td>
+            <td>12</td>
+
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>14</td>
+            <td>15</td>
+
         </tr>
     </table>
+    
 </body>
 </html>
