--- a/desafios/d013/tabela002.html
+++ b/desafios/d013/tabela002.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas</title>
+    <title>Desafio</title>
     <style>
         table {
-            border-collapse: collapse;
-            width: 400px;
+            width: 300px;
         }
 
         td {
@@ -23,24 +22,31 @@
     </style>
 </head>
 <body>
-    <h1>Mesclagem de celulas</h1>
     <table>
         <tr>
-            <td>A</td>
-            <td class="msc" colspan="2">B</td>
+            <td class="msc" colspan="4">A</td>
+            <td class="msc" rowspan="4">B</td>
         </tr>
         <tr>
-            <td class="msc" rowspan="3">D</td>
+            <td class="msc" rowspan="4">C</td>
+            <td>D</td>
             <td>E</td>
-            <td class="msc" rowspan="2">F</td>
+            <td>F</td>
         </tr>
         <tr>
+            <td>G</td>
+            <td>H</td>
             <td>I</td>
         </tr>
         <tr>
+            <td>J</td>
             <td>K</td>
             <td>L</td>
         </tr>
+        <tr>
+            <td class="msc" colspan="4">M</td>
+        </tr>
     </table>
+    
 </body>
 </html>
