--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -24,7 +24,7 @@
     </p>
 
     <ul>
-        <li><a href="paginas-extras/pag001.html" target="frame">Primeira página</a></li>
+        <li><a href="https://luiz0dias.github.io/site.android/" target="frame">Primeira página</a></li>
         <li><a href="paginas-extras/pag002.html" target="frame">Segunda página</a></li>
         <li><a href="paginas-extras/pag003.html" target="frame">Terceira página</a></li>
     </ul>
